--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.2",
-    "swr": "^2.2.4"
+    "styled-components": "^6.1.1",
+    "swr": "^2.2.4",
+    "use-local-storage-state": "^19.1.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
